--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
       <div class="row">
          <div class="small-12 small-text-left medium-10 medium-text-right columns end ">
             <h2>Get your early bird package!<br><span>3 blue - 3 red</span></h2>
-            <a href="#" class="button radius">GET IT NOW</a>
+            <a href="#" class="button radius" data-reveal-id="orderForm">GET IT NOW</a>
          </div>
       </div>
    </section>
    <section id="whiteLabel">
       <div class="row">
          <div class="small-12 medium-10 medium-offset-1 columns end">
-            <h2>PERSONALIZE YOUR WHOLY PADDLES TO YOUR BRAND</h2>
+            <h2>PERSONALIZE YOUR WHOLY<br class="show-for-large-up"> PADDLES TO YOUR BRAND</h2>
          </div>
       </div>
       <div class="row">
@@ -116,6 +116,29 @@
          </div>
       </div>
    </footer>
+   <!-- ORDER FORM -->
+   <div id="orderForm" class="reveal-modal xlarge" data-reveal aria-labelledby="orderForm" aria-hidden="true" role="dialog">
+      <div class="row">
+         <div class="small-12 columns">
+            <h2>ORDER YOUR EARLY BIRD PACKAGE</h2>
+         </div>
+      </div>
+      <div class="scrollable-content">
+         <div class="row">
+            <div class="small-12 columns" >
+               <p>A construction site’s inventory can be difficult to manage - different stakeholders are responsible for different assets, which can make keeping track of everything a struggle. Work sites can also be a popular target for thieves. Our software is made for assets with or without power supplies and with a variety of mobilities. It enables smoother management of your assets through the substitution of a physical inventory for accurate information, while their maintenance can be scheduled in advance. Your employees will be able to concentrate on their jobs, rather than on keeping an eye on your assets.</p><br>
+            </div>
+            <div class="small-12 columns" >
+               <ul class="bullets">
+                  <li>Help manage your construction site’s inventory</li>
+                  <li>Help prevent loss and theft</li>
+                  <li>Lessen the burden on employees</li>
+               </ul>
+            </div>
+         </div>
+      </div>
+      <a class="close-reveal-modal" aria-label="Close">&#10005;</a>
+   </div>
    <script src="bower_components/jquery/dist/jquery.min.js"></script>
    <script src="bower_components/foundation/js/foundation.min.js"></script>
    <script src="js/app.js"></script>
