modal & form ok - scroll done

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       </div>
       <div class="row show-for-medium-up">
          <div class="medium-11 medium-offset-1 columns">
-            <a href="#" class="button radius">HOW IT WORKS</a>
-            <a href="#" class="button radius">ORDER A PACK</a>
+            <a href="#intro" class="button radius">HOW IT WORKS</a>
+            <a href="#pack" class="button radius">ORDER A PACK</a>
          </div>
       </div>
    </header>
@@ -103,7 +103,7 @@
          </div>
          <div  class="small-12 medium-10 medium-offset-1 large-text-right large-5 large-offset-0 xlarge-4 xlarge-offset-1 columns end ">
             <h4>already partners</h4>
-            <a href="http://star-board-sup.com/2015/products/astro-sup-polo/" title="Starboard Astro SUP polo" alt="Starboard Astro SUP polo"></ahref><img src="img/Tiki.png"></a>
+            <a href="http://star-board-sup.com/2015/products/astro-sup-polo/" target="_blank" title="Starboard Astro SUP polo" alt="Starboard Astro SUP polo"></ahref><img src="img/Tiki.png"></a>
          </div>
       </div>
    </section>
@@ -120,27 +120,88 @@
    <div id="orderForm" class="reveal-modal xlarge" data-reveal aria-labelledby="orderForm" aria-hidden="true" role="dialog">
       <div class="row">
          <div class="small-12 columns">
-            <h2>ORDER YOUR EARLY BIRD PACKAGE</h2>
+            <h2>GET STARTED WITH 6 WHOLY PADDLES</h2>
+            <p>We just recieved our first production batch, send us a message to get your pack!</p>
          </div>
       </div>
       <div class="scrollable-content">
-         <div class="row">
-            <div class="small-12 columns" >
-               <p>A construction site’s inventory can be difficult to manage - different stakeholders are responsible for different assets, which can make keeping track of everything a struggle. Work sites can also be a popular target for thieves. Our software is made for assets with or without power supplies and with a variety of mobilities. It enables smoother management of your assets through the substitution of a physical inventory for accurate information, while their maintenance can be scheduled in advance. Your employees will be able to concentrate on their jobs, rather than on keeping an eye on your assets.</p><br>
-            </div>
-            <div class="small-12 columns" >
-               <ul class="bullets">
-                  <li>Help manage your construction site’s inventory</li>
-                  <li>Help prevent loss and theft</li>
-                  <li>Lessen the burden on employees</li>
-               </ul>
+         <div id="message" class="row collapse"></div>
+            <div class="row collapse">
+               <form method="post" action="contact_oym.php" name="contactform" id="contactform" novalidate>
+                  <div class="row">
+                     <div class="small-12 medium-6 columns">
+                        <input type="text" id="name" placeholder="Name">
+                     </div>
+                     <div class="small-12 medium-6 columns">
+                        <input type="text" id="company" placeholder="Company">
+                     </div>
+                  </div>
+                  <div class="row">
+                     <div class="small-12 medium-6 columns">
+                        <input type="email" id="email" placeholder="Email">
+                     </div>
+                     <div class="small-12 medium-6 columns">
+                        <input type="tel" id="phone" placeholder="Phone">
+                     </div>
+                  </div>
+                  <div class="row">
+                     <div class="small-12 columns radius">
+                        <textarea type="text" id="remarks" name="remarks"></textarea>
+                     </div>
+                  </div>
+                  <div class="row">
+                     <div class="small-12 medium-6 large-4 columns" class="right">
+                        <button class="button radius dark" id="submit" type="submit">SEND</button>
+                     </div>
+                  </div>
+               </form>
             </div>
          </div>
+         <a class="close-reveal-modal" aria-label="Close">&#10005;</a>
       </div>
-      <a class="close-reveal-modal" aria-label="Close">&#10005;</a>
    </div>
    <script src="bower_components/jquery/dist/jquery.min.js"></script>
    <script src="bower_components/foundation/js/foundation.min.js"></script>
    <script src="js/app.js"></script>
+   <!-- SCROLL -->
+   <script>
+   var $root = $('html, body');
+   $('a').click(function() {
+      var href = $.attr(this, 'href');
+      $root.animate({
+         scrollTop: $(href).offset().top
+      }, 1000, function () {
+         window.location.hash = href;
+      });
+      return false;
+   });
+   </script>
+   <!-- FORM -->
+   <script>
+   jQuery(document).ready(function(){
+      $('#contactform').submit(function(){
+         var action = $(this).attr('action');
+         $('#contactform #submit').attr('disabled','disabled').after();
+         $("#message").slideUp(600,function() {
+            $('#message').hide();
+            $.post(action, {
+               email: $('#email').val(),
+               name: $('#name').val(),
+               company: $('#company').val(),
+               phone: $('#phone').val(),
+               remarks: $('#remarks').val(),
+            },
+            function(data){
+               document.getElementById('message').innerHTML = data;
+               $('#message').slideDown('slow');
+               $('#contactform').fadeOut('fast',function(){$(this).remove()});
+               $('#contactform #submit').removeAttr('disabled','');
+               if(data.match('success') != null) $('#contactform').slideUp('slow');
+            });
+         });
+         return false;
+      });
+   });
+   </script>
 </body>
 </html>
