Typo fixe - mails to mathias, not pym

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <div class="row">
          <div class="small-12 medium-10 medium-offset-1 large-5 columns end">
             <p>Wholy paddle have been invented, <br>designed and PATENTED IN 2014.</p>
-            <p>We DO produce FOR PARTNERS. <br><a href="mailto:pierre.yves@wholypaddle.com">contact us</a> today to GET YOUR BRANDED WHOLY PADDLES BEFORE SUMMER 2016!</p>
+            <p>We DO produce FOR PARTNERS. <br><a href="mailto:mathias@wholypaddle.com">contact us</a> today to GET YOUR BRANDED WHOLY PADDLES BEFORE SUMMER 2016!</p>
          </div>
          <div  class="small-12 medium-10 medium-offset-1 large-text-right large-5 large-offset-0 xlarge-4 xlarge-offset-1 columns end ">
             <h4>already partners</h4>
