fix form, contact & content

--- a/order.html
+++ b/order.html
@@ -90,7 +90,7 @@
       <div class="row">
          <div class="small-12 medium-10 medium-offset-1 columns end">
             <hr>
-            <small class="left">Wholy Paddle - Pierre-Yves Mottier - Av. de La plage 1 - 1028 Preverenges <span class="hide-for-large-up">Copyright © 2015 Wholy Paddle</span></small>
+            <small class="left">Wholy Paddle - Pierre-Yves Mottier - Av. de La plage 1 - 1028 Preverenges - Switzerland<span class="hide-for-large-up">Copyright © 2015 Wholy Paddle</span></small>
             <small class="right show-for-large-up">Copyright © 2015 Wholy Paddle</small>
          </div>
       </div>
