--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
    <section id="whiteLabel">
       <div class="row">
          <div class="small-12 medium-10 medium-offset-1 columns end">
-            <h2>PERSONALIZE YOUR WHOLY<br class="show-for-large-up"> PADDLES TO YOUR BRAND</h2>
+            <h2>PERSONALIZE YOUR WHOLY PADDLES <br class="show-for-large-up">TO YOUR BRAND</h2>
          </div>
       </div>
       <div class="row">
