fix content (- to +)

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
    <section id="pack">
       <div class="row">
          <div class="small-12 small-text-left medium-10 medium-text-right columns end ">
-            <h2>Get your early bird package!<br><span>3 blue - 3 red</span></h2>
+            <h2>Get your early bird package!<br><span>3 blue + 3 red</span></h2>
             <a href="order.html" target="_blank" class="button radius">GET IT NOW</a>
          </div>
       </div>
