--- a/order.html
+++ b/order.html
@@ -44,7 +44,7 @@
       </div>
       <div class="row">
          <div class="small-12 medium-10 medium-offset-1 columns end">
-            <h2>GET STARTED WITH 6 WHOLY PADDLES<br>3 blue - 3 red</h2>
+            <h2>GET STARTED WITH 6 WHOLY PADDLES<br>3 blue + 3 red</h2>
             <p>We just received our first production batch. Interested? send us a message!</p>
             <br><br>
          </div>
