Shorten conversion funnel + Add images on orders page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="row show-for-medium-up">
          <div class="medium-11 medium-offset-1 columns">
             <a href="#intro" class="button radius">HOW IT WORKS</a>
-            <a href="#pack" class="button radius">ORDER A PACK</a>
+            <a href="order.html" class="button radius" target="_blank">ORDER A PACK</a>
          </div>
       </div>
    </header>
@@ -98,7 +98,7 @@
       </div>
       <div class="row">
          <div class="small-12 medium-10 medium-offset-1 large-5 columns end">
-            <p>Wholy paddle have been invented, <br>designed and PATENTED IN 2014.</p>
+            <p>Wholy paddle have been invented, <br class="show-for-medium-up">designed and PATENTED IN 2014.</p>
             <p>We DO produce FOR PARTNERS. <br><a href="mailto:pierre.yves@wholypaddle.com">contact us</a> today to GET YOUR BRANDED WHOLY PADDLES BEFORE SUMMER 2016!</p>
          </div>
          <div  class="small-12 medium-10 medium-offset-1 large-text-right large-5 large-offset-0 xlarge-4 xlarge-offset-1 columns end ">
