--- a/order.html
+++ b/order.html
@@ -86,6 +86,21 @@
          </div>
       </div>
    </section>
+   <section id="thumbs">
+      <div class="row collapse full-width">
+         <div class="small-12 medium-10 medium-offset-1 columns">
+            <div class="small-12 medium-4 columns">
+               <img src="img/thumb1.jpg"><br class="hide-for-large-up">
+            </div>
+            <div class="small-12 medium-4 columns">
+               <img src="img/thumb2.jpg"><br class="hide-for-large-up">
+            </div>
+            <div class="small-12 medium-4 columns">
+               <img src="img/thumb3.jpg">
+            </div>
+         </div>
+      </div>
+   </section>
    <footer>
       <div class="row">
          <div class="small-12 medium-10 medium-offset-1 columns end">
