fix thumbs on xl

--- a/order.html
+++ b/order.html
@@ -87,7 +87,7 @@
       </div>
    </section>
    <section id="thumbs">
-      <div class="row collapse full-width">
+      <div class="row collapse">
          <div class="small-12 medium-10 medium-offset-1 columns">
             <div class="small-12 medium-4 columns">
                <img src="img/thumb1.jpg"><br class="hide-for-large-up">
