--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <title>Wholy paddle - Add ball games to stand up paddle</title>
+   <title>Wholy paddle - Add ball games to stand up paddle - SUP polo</title>
+   <meta name="description" content="With wholy paddle you can play with a ball on your stand up paddle. From a simple catch and throw to energic SUP polo.">
    <link rel="stylesheet" href="css/app.css" />
    <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-touch-icon-57x57.png">
    <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-touch-icon-60x60.png">
